[gd_scene load_steps=6 format=3 uid="uid://bt22af6fcustb"]

[ext_resource type="Script" uid="uid://bi35v21bapk6p" path="res://assault/scenes/gui/weapon_selector.gd" id="1_so77n"]
[ext_resource type="Texture2D" uid="uid://cfne3etr0ukfj" path="res://assault/assets/gui/weaponselector/icon_empty_slot.png" id="3_fyubp"]
[ext_resource type="Texture2D" uid="uid://cnap6cceg8u6t" path="res://assault/assets/gui/weaponselector/frame_center.png" id="4_o4qlf"]
[ext_resource type="Texture2D" uid="uid://b55guie2m54l1" path="res://assault/assets/gui/weaponselector/frame_left.png" id="5_i0xiy"]
[ext_resource type="Texture2D" uid="uid://bin85navlbtso" path="res://assault/assets/gui/weaponselector/frame_right.png" id="6_0i3fy"]

[node name="WeaponSelector" type="Node2D"]
script = ExtResource("1_so77n")
default_icon = ExtResource("3_fyubp")

[node name="SelectorLeft" type="Node2D" parent="."]

[node name="IconLeft" type="Sprite2D" parent="SelectorLeft"]
texture_filter = 1
position = Vector2(-46, 20)
texture = ExtResource("3_fyubp")

[node name="FrameLeft" type="Sprite2D" parent="SelectorLeft"]
position = Vector2(-46, 20)
texture = ExtResource("5_i0xiy")

[node name="SelectorCenter" type="Node2D" parent="."]

[node name="IconCenter" type="Sprite2D" parent="SelectorCenter"]
texture_filter = 1
position = Vector2(0, 44)
texture = ExtResource("3_fyubp")

[node name="FrameCenter" type="Sprite2D" parent="SelectorCenter"]
position = Vector2(0, 44)
texture = ExtResource("4_o4qlf")

[node name="SelectorRight" type="Node2D" parent="."]

[node name="IconRight" type="Sprite2D" parent="SelectorRight"]
texture_filter = 1
position = Vector2(46, 20)
texture = ExtResource("3_fyubp")

[node name="FrameRight" type="Sprite2D" parent="SelectorRight"]
position = Vector2(46, 20)
texture = ExtResource("6_0i3fy")
